# examen-dvc

./: .gitignore  HOW_TO_COMPLETE.md  HOW_TO_FIRST.md  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  run_pipeline.sh
.dvc/: config
data/: processed_data.dvc  raw_data.dvc
metrics/: scores.json
src/data/: normalize.py  split.py
src/models/: evaluate.py  grid_search.py  training.py
